--- a/bower.json
+++ b/bower.json
@@ -8,8 +8,7 @@
     "es5-shim": "~2.0.8",
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
-    "angular-sanitize": "~1.0.7",
-    "bootstrap": "~3.0.0"
+    "angular-sanitize": "~1.0.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
