--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
     "es5-shim": "~2.0.8",
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
-    "angular-sanitize": "~1.0.7"
+    "angular-sanitize": "~1.0.7",
+    "less.js": "~1.4.2",
+    "jquery-ui": "~1.10.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
