--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-cookies": "~1.0.7",
     "angular-sanitize": "~1.0.7",
     "less.js": "~1.4.2",
-    "jquery-ui": "~1.10.3"
+    "jquery-ui": "~1.10.3",
+    "font-awesome": "~3.2.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
