--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "~1.0.7",
     "less.js": "~1.4.2",
     "jquery-ui": "~1.10.3",
-    "font-awesome": "~3.2.1"
+    "font-awesome": "~3.2.1",
+    "bootstrap": "~3.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
