--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "less.js": "~1.4.2",
     "jquery-ui": "~1.10.3",
     "font-awesome": "~3.2.1",
-    "bootstrap": "~3.0.0"
+    "bootstrap": "~3.0.0",
+    "jquery.colorpicker": "~4.9.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
